# CHANGELOG

## Update : v.0.2.0.9000
- 2023-02-15 : Run `check()`.
    - Fixed potential problems in the script (eg. wrong variables...).
    - Fixed dependency problems (import).
    - Added License with `use_mit_license()`.
- 2023-02-15 : PIS results into S3 class object. Added generic print function.

## Update : v.0.1.3.9000
- 2023-01-09 : getGenesByCutoffs -- gene list ID name format
- 2023-02-10 : hypergeoTestForGeneset.simple -- vectorized calculation for speed.

## Update : v.0.1.3 (updated to server at Jul 14, 2022)
- 2022-07-13 : hypergeoTestForGeneset.simple -- match refGMT gene space match after checking
- 2022-07-14 : calculatePathwayScores -- minGeneSet default to NULL because it doesn't do a damn thing --> remove alltogether at the last ver.
- 2022-07-14 : getPeakResults2 -- remove indivpeak from outputs

## Update : v.0.1.2 (updated to server at Jul 8, 2022)
- 2022-07-08 : Added getGenesByCutoffs
- 2022-07-08 : Removed Gen_enrichment to avoid potential conflict with Lazy2 version
- 2022-07-08 : hypergeoTestForGeneset.simple -- Instead of stopping with error when gspace doesn't contain all query, function quietly removes query genes outside of given space.
- 2022-07-08 : hypergeoTestForGeneset.simple -- exc variable correctly detects gene set items to be removed. ('<=' -> '<')

## Update : v.0.1.1 (updated to server at Jun 3, 2022)
- 2022-05-11 : Gen_enrichment function updated version added
- 2022-05-30 : pathwayScores ef_cut default to 2
- 2022-05-30 : hypergeoTestForGeneset.simple -- only tell about removed geneset if verbose
- 2022-05-30 : getPeakResults2 -- get rid of peak_cnt2

## Update : v.0.1.0
- 2021-11-08 : take intersected gene set size only
- 2021-11-19 : getPeakResults for all peak data
- 2021-11-19 : verbose options to shut some functions up
- 2022-01-05 : summarizePISResults. Wrap PIS result from DEG list. (testing)
- 2022-01-12 : Update Network Density functions.