@@ -1,6 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
-export(.newPISobj)
+S3method(print,PISobj)
 export(binGenesByCntCutoff)
 export(calculatePathwayScores)
 export(createGeneRank)
@@ -9,9 +9,11 @@ export(geneCount)
 export(getGenesByCutoffs)
 export(getPeakResults2)
 export(hypergeoTestForGeneset.simple)
+export(new_PISobj)
 export(readGMT)
 export(scoreSmooth)
 export(theme_transparent3)
+export(validate_PISobj)
 export(writeGMT)
 import(data.table)
 import(ggplot2)
