@@ -11,9 +11,6 @@
 	if(today == "0401") {
 		msg <- paste0(msg, "\nError: April fools!")
 	}
-	# if(today == "0504") {
-	# 	msg <- paste0(msg, "\nMay the Fourth be with you!")
-	# }
 	if(today %in% c("1224","1225") ) {
 		msg <- paste0(msg, "\n\n*-*-*-*-*-*-*-*-*-*\n* Merry Christmas! *\n*-*-*-*-*-*-*-*-*-*\n")
 	}
