@@ -1,11 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/PISobj_class.R
-\name{.newPISobj}
-\alias{.newPISobj}
-\title{PIS object S3 class}
-\usage{
-.newPISobj()
-}
-\description{
-Summarize result from calculatePathwayScores and get peak cut-off.
-}
